# scopion

./: .gitignore  BENCHMARKING.md  LICENSE  Makefile  README.md  check_processes.sh  go.mod  go.sum
clients/: package.json  scopion.go  scopion.test.ts  scopion.ts  scopion_client.py  scopion_test.go  tsconfig.json
clients/go/: README.md  go.mod  scopion.go  scopion_test.go
clients/python/: .gitignore  README.md  __init__.py  pyproject.toml  test_scopion_client.py
clients/typescript/: .prettierignore  .prettierrc  README.md  package.json  scopion.test.ts  scopion.ts  tsconfig.json
internal/api/: api_test.go  db_switch.go  events.go
internal/api/httpx/: httpx.go
internal/api/middleware/: log_middleware.go
internal/app/: router.go  server.go
internal/app/appcontext/: app_state.go
internal/benchmark/: analyzer.go  generator.go  monitor.go
internal/cli/: cli.go  cli_test.go
internal/demo/: generator.go  generator_test.go
internal/infra/dockerclient/: docker_client.go  (+1 more)
internal/ingest/: handler.go  ingest_test.go
internal/live/: broadcaster.go  sse.go
internal/model/: errors.go  event.go  service_info.go  stats.go  througput.go  trace.go
internal/store/: atomic_store.go  interface.go  state.go  store.go  store_test.go
migrations/: 20250116100000_create_events_table.sql  20250117000000_add_event_data.sql
orchestrator/: orchestrator.go
ui/: .prettierignore  embed.go  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui/src/: main.tsx  routeTree.gen.ts  styles.css
web/: package.json
(+56 files in other folders)
