[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopion-client"
version = "1.0.0"
description = "Client library for Scopion"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/xonoxc/scopion"
Repository = "https://github.com/xonoxc/scopion"

[tool.setuptools]
packages = ["scopion_client"]

[tool.setuptools.package-dir]
"" = "."

